--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,9 @@
  <title>PERFIL PROFILE</title>  
  </head>  
  <body>   
+ 	<div style="text-align:center; width:100%">
  <h3>ALGUNOS DATOS DE TU PERFIL </h3>  
  Tu correo electronico es: {{name}} 
+ </div>
  </body>  
  </html> 
