--- a/templates/success3.html
+++ b/templates/success3.html
@@ -4,7 +4,9 @@
  <title>ENTRADA BIEN</title>  
  </head>  
  <body>   
+ 	<div style="text-align:center; width:100%">
  <h3>Login satisfactorio</h3>  
  <a href = "/profile">Ver profile</a><br>  
+ </div>
  </body>  
  </html> 
