Con sesiones y contador de medias

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -4,7 +4,9 @@
  </head>  
  <body>   
  	<div style="text-align:center; width:100%">
- <p>logout successful, click <a href="/login">here</a> to login again</p>  
+ <h3{{ sesion }}></h3>
+ <a href="/login">Iniciar sesión</a><br> 
+ <a href = "/">Inicio</a><br>  
  </div>
  </body> 
  </html> 
