--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,12 +1,14 @@
 
 <html>  
  <head>  
- <title>PERFIL PROFILE</title>  
+ <title>Mi perfil</title>  
  </head>  
  <body>   
  	<div style="text-align:center; width:100%">
- <h3>ALGUNOS DATOS DE TU PERFIL </h3>  
- Tu correo electronico es: {{name}} 
+ Tu correo electronico es: {{ email }}<br><br> 
+ El número de veces que has pedido la media local es: {{ local_mean }}<br><br>
+ El número de veces que has pedido la media remota es: {{ remote_mean }}<br><br>
+ <br><a href = "/">Inicio</a><br>  
  </div>
  </body>  
  </html> 
