--- a/templates/success.html
+++ b/templates/success.html
@@ -1,9 +1,14 @@
+
 <html>  
  <head>  
- <title>success</title>  
+ <title>Éxito</title>  
  </head>  
- <body>  
-   <h2>Login successful</h2>  
-     <a href="/profile">View Profile</a>  
+ <body>   
+ 	<div style="text-align:center; width:100%">
+ <h3>Inicio de sesión satisfactorio</h3>  
+ <h3>Usuario {{ usuario }}</h3><br> 
+ <a href = "/profile">Ver profile</a><br>  
+ <a href = "/">Inicio</a><br>  
+ </div>
  </body>  
  </html> 
