--- a/templates/register.html
+++ b/templates/register.html
@@ -1,16 +1,17 @@
 <html>  
  <head>  
-  <title>login</title>  
+  <title>Registro</title>  
  </head>  
  <body>  
-  <h3>{{ mensaje }}</h3>
-  <form method = "POST" action = "./login">  
+  <form method = "POST" action = "./register">  
        <table>  
              <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
-             <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
+             <tr><td>Nombre de usuario</td><td><input type = 'username' name = 'name'></td></tr>  
+             <tr><td>Contraseña</td><td><input type = 'password' name = 'pass'></td></tr>  
              <tr><td><input type = "submit" value = "Submit"></td></tr>  
          </table>   
      </form>  
+  <h3>{{ mensaje }}</h3>
  <a href = "/">Inicio</a><br>  
  </body>  
  </html> 
