--- a/templates/index_log.html
+++ b/templates/index_log.html
@@ -1,4 +1,3 @@
-
 <html>  
  <head>  
  <title>Inicio</title>  
@@ -10,6 +9,10 @@
 
  		<a href = "/profile">Ver perfil</a><br>  
  		<a href = "/logout">Cerrar sesión</a><br>  
+
+		<br><br>
+
+ 		<a href = "/graphic">Gráfica remota</a><br>  
 
 		<br><br>
 
