--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
        <table>  
              <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>  
              <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>  
-             <tr><td><input type = "submit" value = "Submit"></td></tr>  
+             <tr><td><input type = "su0bmit" value = "Submit"></td></tr>  
          </table>   
      </form>  
  <a href = "/">Inicio</a><br>  
