Con gráfica y con primera mejora y comentarios

--- a/templates/index_log.html
+++ b/templates/index_log.html
@@ -16,6 +16,10 @@
 
 		<br><br>
 
+ 		<a href = "/umbral">Umbral</a><br>  
+
+		<br><br>
+
   	<form method = "POST" action = "./media">  
     	<button name="base" value = "local">Media con DB local</button>
     	<button name="base" value = "remota">Media con DB remota</button>
