--- a/templates/graphic.html
+++ b/templates/graphic.html
@@ -3,8 +3,8 @@
  <title>Gráfica</title>  
  </head>  
  <body>
-  <script id="GblId839" type="text/javascript">
-    function getEmbedMetaDataGblId839() {
+<script id="GblId1452" type="text/javascript">
+    function getEmbedMetaDataGblId1452() {
         return {
             "apiKey": '695ae44b-9cd8-3cde-8d19-fc2cb2937a5c',
             "orgUid": '7c4ca240-5c86-35a4-bd0c-6e9f1448583c',
@@ -12,12 +12,13 @@
             "widgetUid": 'd315a2dc-485c-3e89-95ac-38a90dfb1a7f',
             "cType": 'http',
             "embedHeight": 300,
-            "embedWidth": 708,
+            "embedWidth": 430,
             "embedBorder": true
         };
     }
-  </script>
-  <script type="text/javascript" src="https://grovestreams.com/js/embed.js"> </script>
+</script>
+<div id="embedWidgetDivGblId1452"></div>
+<script type="text/javascript" src="https://grovestreams.com/js/embed.js"> </script>
  	<div style="text-align:center; width:100%">
   <div id="embedWidgetDivGblId839" style="text-align:center; width:100%"></div>
 
